# yanjing

./: .gitignore  AGENTS.md  INTEGRATION_SUMMARY.md  build-profile.json5  oh-package.json5  鸿蒙 6.0 (HarmonyOS Next) 文件选择器选择视频文件指南.md
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: .gitignore  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  panorama_renderer.cpp  plugin_manager.cpp  sphere_mesh.cpp
entry/src/main/cpp/include/: panorama_renderer.h  plugin_manager.h  sphere_mesh.h
entry/src/main/cpp/types/libpanorama_renderer/: index.d.ets  oh-package.json5
entry/src/main/ets/display/: ExternalDisplayManager.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: ExternalPanoramaView.ets  Index.ets  PanoramaView.ets  PanoramaViewNew.ets
entry/src/main/ets/sensor/: GlassesImuManager.ets  SensorManager.ets
entry/src/main/ets/utils/: ListenerImplementations.ets  MathUtils.ets
entry/src/main/ets/video/: VideoPlayerManager.ets
temp/md360player/: CHANGELOG.md  README.OpenSource  README.en.md  README.md  build-profile.json5  oh-package-lock.json5
temp/md360player/AppScope/: app.json5
temp/md360player/entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
temp/md360player/entry/src/main/: module.json5
temp/md360player/vrlib/src/main/cpp/: CMakeLists.txt
temp/md360player/vrlib/src/main/cpp/napi/: md360player_napi.h
temp/md360player/vrlib/src/main/cpp/types/libmd360player/: oh-package.json5
temp/md360player/vrlib/src/main/cpp/vrlib/: cardboard_motion_napi.h  cardboard_motion_strategy.h  head_tracker.cpp  interactive_strategy.cpp  md_lifecycle.h  md_object_3d.h  motion_strategy.h  sensor_agent.h
temp/md360player/vrlib/src/main/cpp/vrlib/device/: md_nativeimage_ref.h
temp/md360player/vrlib/src/ohosTest/: module.json5
vrlib/: Index.ets  build-profile.json5  oh-package-lock.json5  oh-package.json5
vrlib/src/main/: module.json5
vrlib/src/main/cpp/: napi_init.cpp
vrlib/src/main/cpp/napi/: md360player_napi.cc  md_napi_utils.cc  md_napi_utils.h  napi_init.cc
vrlib/src/main/cpp/vrlib/: cardboard_motion_napi.cpp  cardboard_motion_strategy.cpp  head_tracker.h  interactive_strategy.h  md360_director.cpp  md360_director.h  md_defines.h  md_log.cc  md_log.h  md_object_3d.cc  md_renderer.cc  md_renderer.h  md_vr_library.cc  md_vr_library.h  motion_strategy.cc  ohos_sensor_manager.cpp  ohos_sensor_manager.h  (+1 more)
(+129 files in other folders)
